# meldworld

./: .gitignore  AGENTS.md  CANON.md  CITY-PROPOSAL.md  Cargo.toml  GAP-ANALYSIS.md  Makefile  README.md  README.spec-index.md  SPIKE-NOTES.md  VERTICALITY-PROPOSAL.md  docker-compose.yml  example.json  home.html  hub.go  meldworld.go  player.go
.claude/: launch.json
.github/workflows/: dist.yml
balance/: balance.toml
behaviors/: economy.md  meta-progression.md  run-lifecycle.md  world-generation.md
client/: Cargo.toml
client/.cargo/: config.toml
client/crates/meld-client/: Cargo.toml  Trunk.toml  index.html
client/crates/meld-client/assets/: ATTRIBUTIONS.md
client/crates/meld-client/assets/characters/PSYKER_Male/: metadata.json
client/crates/meld-client/assets/characters/PSYKER_Male/Psyker/: metadata.json
client/crates/meld-client/assets/characters/PSYKER_Male/Squire/: metadata.json
client/crates/meld-client/assets/shaders/: ground_biome.wgsl
client/crates/meld-client/src/: embedded.rs  hd2d.rs  lib.rs  main.rs  net.rs
client/scripts/: serve.sh  trunk-build.sh  trunk-serve.sh
clients/: main.go
docs/: BUILD-PLAN.md  CANON.md  GDD.md  README.md  ROADMAP.md  spec-index.md
docs/behaviors/: async-interaction.md  combat-atb.md  disconnect-handling.md  endgame-seasons.md  world-generation.md
docs/edge-cases/: limits.md
docs/interfaces/: data-models.md  http-api.md  realtime-protocol.md
docs/interfaces/data-models/: combat-models.md  economy-models.md  gear-item-models.md  player-models.md  world-models.md
docs/interfaces/http-api/: auth-players.md  crafting-meld.md  economy.md  leaderboards.md  runs-world.md
docs/interfaces/realtime-protocol/: battle.md  run-social.md
docs/proposals/: last-city.md  verticality.md  worldgen-wg.md
entity/: actor.go  human.go
interfaces/data-models/: player-models.md  run-models.md
interfaces/http-api/: auth-players.md  runs-world.md  vault-gear.md
interfaces/realtime-protocol/: movement-world.md  run-social.md  session.md
map/: map.go
mapper/: mapper.go
model/: actor.go  base.go  communication.go  map.go  player.go
qa/: Cargo.toml
qa/scripts/: local_pg.sh
qa/src/: lib.rs
qa/tests/: auth_conformance.rs  concurrent_battles.rs  death_durability.rs  extraction.rs  formation.rs  four_players_kill_monster.rs  harvest.rs  hero_names.rs  lobby_coop.rs  progression.rs  raid_merge.rs  redive.rs
server/: entity_ids.json  example.json  hub.go  meldworld.go  player.go  queue.go
server/crates/meld-api/: Cargo.toml
server/crates/meld-api/src/: lib.rs  tokens.rs
server/crates/meld-balance/: Cargo.toml
server/crates/meld-balance/src/: lib.rs
server/crates/meld-battle/: Cargo.toml
server/crates/meld-battle/src/: lib.rs
server/crates/meld-db/: Cargo.toml
server/crates/meld-db/src/: lib.rs
server/crates/meld-run/: Cargo.toml
server/crates/meld-run/src/: lib.rs
server/crates/meld-server/: Cargo.toml
server/crates/meld-server/src/: config.rs  game.rs  gateway.rs  lib.rs  main.rs
server/crates/meld-world/: Cargo.toml
server/crates/meld-world/src/: lib.rs
server/scratch/: main.go
shared/meld-proto/: Cargo.toml
shared/meld-proto/src/: common.rs  enums.rs  envelope.rs  factions.rs  http.rs  lib.rs  limits.rs  realtime.rs  skills.rs
