[package]
name = "meld-qa"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "QA harness: headless bot clients + conformance/integration tests (BUILD-PLAN T6)."

[dependencies]
meld-proto.workspace = true

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = "0.24"
futures-util.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { workspace = true }
meld-server.workspace = true
meld-db.workspace = true
meld-balance.workspace = true
