[package]
name = "meld-client"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Bevy client: overworld + ATB battle UI for the core gameplay loop (T4+T5)."

[dependencies]
bevy = "0.16"
# Cross-platform networking (native desktop AND browser/wasm): ewebsock for the
# realtime WebSocket, ehttp for the auth HTTP calls. Both are poll/callback based
# and need no tokio, so the same code runs on the desktop and in the browser.
ewebsock = "0.6"
ehttp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
meld-proto = { path = "../../../shared/meld-proto" }

# In the browser, uuid/getrandom need the JS entropy backend, and we read the
# server base from the page origin.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "v7", "js"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }
