[package]
name = "meld-client"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Bevy client: overworld + ATB battle UI for the core gameplay loop (T4+T5)."
# The crate ships two binaries (the game + the `smoke` test harness); name the
# game as the default so a bare `cargo run -p meld-client` (e.g. from serve.sh /
# `make play-native`) is unambiguous.
default-run = "meld-client"

[dependencies]
bevy = "0.16"
# Cross-platform networking (native desktop AND browser/wasm): ewebsock for the
# realtime WebSocket, ehttp for the auth HTTP calls. Both are poll/callback based
# and need no tokio, so the same code runs on the desktop and in the browser.
ewebsock = "0.6"
ehttp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
meld-proto = { path = "../../../shared/meld-proto" }

[features]
# The self-contained QA / demo build. With this on, the native binary boots the
# whole server in-process on a background thread (in-memory DB, embedded
# balance — no Postgres, no separate server) and embeds every game asset, so it
# runs as ONE file with nothing beside it. Off by default: the normal client
# talks to a separate server (`MELD_SERVER`) and hot-reloads assets from disk.
# Native only — never enabled for the wasm/browser build.
embedded-server = ["dep:meld-server", "dep:tokio", "dep:bevy_embedded_assets"]

# Native-only extras for the `embedded-server` build. Optional, so a normal
# `cargo build -p meld-client` (and the wasm build) never compiles the server
# stack. Paths reach into the server workspace exactly like meld-proto does.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
meld-server = { path = "../../../server/crates/meld-server", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"], optional = true }
bevy_embedded_assets = { version = "0.13", optional = true }

# In the browser, uuid/getrandom need the JS entropy backend, and we read the
# server base from the page origin.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "v7", "js"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }
