[package]
name = "meld-battle"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Server-authoritative ATB engine: 100ms tick, gauges, actions, resolution (CANON.md §B)."

[dependencies]
uuid.workspace = true
meld-proto.workspace = true
meld-balance.workspace = true

[dev-dependencies]
serde_json.workspace = true
