[package]
name = "meld-server"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Server binary: WS gateway + session handshake, game loop wiring world+run+battle, HTTP mount."

[dependencies]
axum.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
meld-proto.workspace = true
meld-balance.workspace = true
meld-db.workspace = true
meld-api.workspace = true
meld-battle.workspace = true
meld-world.workspace = true
meld-run.workspace = true

[lib]
name = "meld_server"
path = "src/lib.rs"

[[bin]]
name = "meld-server"
path = "src/main.rs"
