[package]
name = "meld-server"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Server binary: WS gateway + session handshake, game loop wiring world+run+battle, HTTP mount."

[dependencies]
axum.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
# `raw_value` lets the game loop serialize a broadcast payload ONCE and embed the
# pre-serialized bytes into every recipient's envelope (see game.rs `dispatch`),
# instead of re-serializing the whole snapshot per session every tick.
serde_json = { workspace = true, features = ["raw_value"] }
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tower-http = { version = "0.6", features = ["cors", "fs"] }
meld-proto.workspace = true
meld-balance.workspace = true
meld-db.workspace = true
meld-api.workspace = true
meld-battle.workspace = true
meld-world.workspace = true
meld-run.workspace = true

[lib]
name = "meld_server"
path = "src/lib.rs"

[[bin]]
name = "meld-server"
path = "src/main.rs"
